Basic working & complete tests

--- a/SieveTests/appsettings.json
+++ b/SieveTests/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "ConnectionStrings": {
+    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=SieveTests;"
+  },
+  "SieveConfig": {
+
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
