--- a/SieveTests/SieveTests.csproj
+++ b/SieveTests/SieveTests.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180127005211_Itit.cs" />
+    <Compile Remove="Migrations\20180127005211_Itit.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -14,6 +19,10 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sieve\Sieve.csproj" />
   </ItemGroup>
 
 </Project>
