Configuration effective, added ISieveModel, better DSL

--- a/SieveTests/appsettings.json
+++ b/SieveTests/appsettings.json
@@ -2,8 +2,9 @@
   "ConnectionStrings": {
     "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=SieveTests;"
   },
-  "SieveConfig": {
-
+  "Sieve": {
+    "CaseSensitive": false,
+    "DefaultPageSize": 10
   },
   "Logging": {
     "IncludeScopes": false,
