--- a/appveyor.yaml
+++ b/appveyor.yaml
@@ -2,3 +2,9 @@ version: 1.0.{build}
 build:
   verbosity: minimal
 image: Visual Studio 2017
+before_build:
+- cmd: >-
+    dotnet restore
+
+    nuget restore
+
