--- a/Sieve/Sieve.nuspec
+++ b/Sieve/Sieve.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Sieve</id>
-    <version>1.2</version>
+    <version>1.3.1</version>
     <title>Sieve</title>
     <authors>Biarity</authors>
     <owners>Biarity</owners>
@@ -10,8 +10,10 @@
     <projectUrl>https://github.com/Biarity/Sieve</projectUrl>
     <iconUrl>https://emojipedia-us.s3.amazonaws.com/thumbs/240/emoji-one/104/control-knobs_1f39b.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries.</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <description>
+      Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://github.com/Biarity/Sieve/
+    </description>
+    <releaseNotes>Added inequality supprort</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>aspnetcore filter sort page paginate sieve search</tags>
     <dependencies>
