--- a/Sieve/Sieve.nuspec
+++ b/Sieve/Sieve.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Sieve</id>
-    <version>1.3.7</version>
+    <version>1.3.8</version>
     <title>Sieve</title>
     <authors>Biarity</authors>
     <owners>Biarity</owners>
@@ -13,7 +13,7 @@
     <description>
       Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://github.com/Biarity/Sieve/
     </description>
-    <releaseNotes>Custom operators no longer supported for simplicity</releaseNotes>
+    <releaseNotes>Filter before sort</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>aspnetcore filter sort page paginate sieve search</tags>
     <dependencies>
