--- a/SieveTests/SieveTests.csproj
+++ b/SieveTests/SieveTests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SieveUnitTests\SieveUnitTests.csproj" />
     <ProjectReference Include="..\Sieve\Sieve.csproj" />
   </ItemGroup>
 
