--- a/test/Sieve.UnitTests/Sieve.UnitTests.csproj
+++ b/test/Sieve.UnitTests/Sieve.UnitTests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>Sieve.UnitTests</AssemblyName>
+
+    <RootNamespace>Sieve.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sieve\Sieve.csproj" />
+    <ProjectReference Include="..\..\src\Sieve\Sieve.csproj" />
   </ItemGroup>
 
 </Project>
