Rename namespace for sieve sample web app

--- a/src/Sieve.Sample/Properties/launchSettings.json
+++ b/src/Sieve.Sample/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SieveTests": {
+    "Sieve.Sample": {
       "commandName": "Project",
       "launchUrl": "api/values",
       "environmentVariables": {
