--- a/src/Sieve.Sample/appsettings.json
+++ b/src/Sieve.Sample/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=SieveTests;"
+    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=Sieve.Sample;"
   },
   "Sieve": {
     "CaseSensitive": false,
