--- a/src/Sieve/Sieve.csproj
+++ b/src/Sieve/Sieve.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Sieve</AssemblyName>
+    <RootNamespace>Sieve</RootNamespace>
     <Version>2.3.2</Version>
     <Description>Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://github.com/Biarity/Sieve/
 </Description>
