--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-﻿image: microsoft/dotnet:2.2-sdk
+image: microsoft/dotnet:2.2-sdk
 
 variables:
  UNIT_TESTS_PROJECT_NAME: 'UnitTests'
@@ -12,8 +12,6 @@ variables:
 stages:
   - build
   - test
-  - pack
-  - publish
 
 cache:
  key: '${CI_JOB_STAGE}-${CI_COMMIT_REF_SLUG}'
