--- a/src/Sieve.Sample/appsettings.json
+++ b/src/Sieve.Sample/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=Sieve.Sample;"
+    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=Strainer.Sample;"
   },
-  "Sieve": {
+  "Strainer": {
     "CaseSensitive": false,
     "DefaultPageSize": 10
   },
