--- a/src/Strainer/Strainer.csproj
+++ b/src/Strainer/Strainer.csproj
@@ -2,20 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Sieve</AssemblyName>
-    <RootNamespace>Sieve</RootNamespace>
+    <AssemblyName>Strainer</AssemblyName>
+    <RootNamespace>Strainer</RootNamespace>
     <Version>3.0.0</Version>
-    <Description>Sieve is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://github.com/Biarity/Sieve/
-</Description>
-    <Copyright>Copyright 2018</Copyright>
-    <PackageLicenseUrl>https://github.com/Biarity/Sieve/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Biarity/Sieve</PackageProjectUrl>
+    <Description>
+      Strainer is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitHub: https://gitlab.com/fluorite/Strainer/
+    </Description>
+    <Copyright>Copyright 2019</Copyright>
+    <PackageLicenseUrl>https://gitlab.com/fluorite/Strainer/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://gitlab.com/fluorite/Strainer</PackageProjectUrl>
     <PackageIconUrl>https://emojipedia-us.s3.amazonaws.com/thumbs/240/twitter/120/alembic_2697.png</PackageIconUrl>
     <RepositoryUrl></RepositoryUrl>
-    <PackageReleaseNotes>Allow subvalues with identical names (#54)</PackageReleaseNotes>
+    <PackageReleaseNotes>Heavy refactoring</PackageReleaseNotes>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Authors>Biarity</Authors>
+    <Authors>Fluorite</Authors>
   </PropertyGroup>
 
   <ItemGroup>
