--- a/src/Strainer.Sample/Strainer.Example.csproj
+++ b/src/Strainer.Sample/Strainer.Example.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyName>Sieve.Sample</AssemblyName>
-    <RootNamespace>Sieve.Sample</RootNamespace>
+    <AssemblyName>Fluorite.Sieve.Example</AssemblyName>
+    <RootNamespace>Fluorite.Sieve.Example</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
