Change namespace for example project

--- a/src/Strainer.Sample/Properties/launchSettings.json
+++ b/src/Strainer.Sample/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Strainer.Sample": {
+    "Strainer.Example": {
       "commandName": "Project",
       "launchUrl": "api/values",
       "environmentVariables": {
