--- a/src/Strainer.Sample/appsettings.json
+++ b/src/Strainer.Sample/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=Strainer.Sample;"
+    "TestSqlServer": "Server=(localdb)\\MSSQLLocalDB; Database=Strainer.Example;"
   },
   "Strainer": {
     "CaseSensitive": false,
