--- a/test/Strainer.UnitTests/Strainer.UnitTests.csproj
+++ b/test/Strainer.UnitTests/Strainer.UnitTests.csproj
@@ -5,13 +5,12 @@
     <AssemblyName>Fluorite.Strainer.UnitTests</AssemblyName>
     <RootNamespace>Fluorite.Strainer.UnitTests</RootNamespace>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
