--- a/test/Strainer.TestModels/Strainer.TestModels.csproj
+++ b/test/Strainer.TestModels/Strainer.TestModels.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Fluorite.Strainer.TestModels</AssemblyName>
     <RootNamespace>Fluorite.Strainer.TestModels</RootNamespace>
   </PropertyGroup>
