Split project into core library and ASP.NET Core extensions

--- a/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
+++ b/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Strainer\Strainer.csproj" />
+    <ProjectReference Include="..\Strainer.AspNetCore\Strainer.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
