--- a/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
+++ b/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
@@ -2,23 +2,30 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Fluorite.Strainer</AssemblyName>
-    <RootNamespace>Fluorite.Strainer</RootNamespace>
+    <AssemblyName>Fluorite.Strainer.AspNetCore</AssemblyName>
+    <RootNamespace>Fluorite.Strainer.AspNetCore</RootNamespace>
     <Authors>Fluorite</Authors>
     <Version>3.0.0</Version>
     <Description>
-      Strainer is a simple, clean, and extensible framework for .NET Core that adds sorting, filtering, and pagination functionality out of the box. Most common use case would be for serving ASP.NET Core GET queries. Documentation available on GitLab: https://gitlab.com/fluorite/strainer/
-    </Description>
+      Extensions for using Strainer with ASP.NET Core.</Description>
     <Copyright>Copyright 2019</Copyright>
-    <PackageTags>strainer,sorting,filtering,pagination,fluorite</PackageTags>
+    <PackageTags>strainer,sorting,filtering,pagination,fluorite,asp.net core</PackageTags>
     <PackageLicenseUrl>https://gitlab.com/fluorite/strainer/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://gitlab.com/fluorite/strainer</PackageProjectUrl>
     <PackageIconUrl>https://gitlab.com/fluorite/assets/raw/master/img/logo/png/fluorite-logo-transparent-bg-64.png</PackageIconUrl>
     <RepositoryUrl>https://gitlab.com/fluorite/strainer</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>Heavy refactoring</PackageReleaseNotes>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Strainer\Strainer.csproj" />
+  </ItemGroup>
 
 </Project>
