--- a/src/Strainer/Strainer.csproj
+++ b/src/Strainer/Strainer.csproj
@@ -17,6 +17,7 @@
     <RepositoryUrl>https://gitlab.com/fluorite/strainer</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Heavy refactoring</PackageReleaseNotes>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
