Split case sensivity option into names and values

--- a/src/Strainer.ExampleWebApi/appsettings.json
+++ b/src/Strainer.ExampleWebApi/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "Strainer": {
-    "CaseSensitive": false,
-    "DefaultPageSize": 10
+    "DefaultPageSize": 10,
+    "IsCaseSensitiveForNames": false,
+    "IsCaseSensitiveForValues": false
   },
   "Logging": {
     "IncludeScopes": false,
