Use SQL Server instead of in memory database

--- a/src/Strainer.ExampleWebApi/appsettings.json
+++ b/src/Strainer.ExampleWebApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=StrainerExample;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Strainer": {
     "DefaultPageSize": 10,
     "IsCaseSensitiveForNames": false,
@@ -6,15 +9,8 @@
   },
   "Logging": {
     "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
   }
 }
