Add integration tests for attribute metadata provider

--- a/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
+++ b/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Strainer.AspNetCore\Strainer.AspNetCore.csproj" />
     <ProjectReference Include="..\..\src\Strainer\Strainer.csproj" />
     <ProjectReference Include="..\Strainer.TestModels\Strainer.TestModels.csproj" />
   </ItemGroup>
