--- a/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
+++ b/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>Fluorite.Strainer.AspNetCore</AssemblyName>
     <RootNamespace>Fluorite.Strainer.AspNetCore</RootNamespace>
     <Authors>Fluorite</Authors>
-    <Version>3.0.0</Version>
+    <Version>3.0.1</Version>
     <Description>
       Extensions for using Strainer with ASP.NET Core.</Description>
     <Copyright>Copyright 2019</Copyright>
@@ -18,6 +18,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+	<LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
