Add StyleCop code analysis, align codebase with StyleCop

--- a/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
+++ b/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
@@ -6,7 +6,9 @@
     <RootNamespace>Fluorite.Strainer.IntegrationTests</RootNamespace>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-	<LangVersion>9.0</LangVersion>
+    <LangVersion>9.0</LangVersion>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
