--- a/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
+++ b/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>Fluorite.Strainer.ExampleWebApi</AssemblyName>
     <RootNamespace>Fluorite.Strainer.ExampleWebApi</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-	<LangVersion>9.0</LangVersion>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Strainer\Strainer.csproj" />
     <ProjectReference Include="..\Strainer.AspNetCore\Strainer.AspNetCore.csproj" />
   </ItemGroup>
 
