Upload unit and integration tests results as opencover

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,19 @@ variables:
  UNIT_TESTS_PROJECT_NAME: 'Strainer.UnitTests'
  SOURCE_CODE_DIRECTORY: 'src'
  TEST_DIRECTORY: 'test'
- TEST_COLLECTOR_NAME: 'XPlat Code Coverage'
- COVERLET_RESULT_DIRECTORY_NAME: '.coverletResults'
- CODECOV_VERSION: '11.13.0'
+ TEST_COLLECTOR_NAME: 'opencover'
+ CODECOV_VERSION: '0.2.4'
  BINARIES_DIRECTORY: 'bin'
  OBJECTS_DIRECTORY: 'obj'
  BUILD_CONFIGURATION: 'Release'
  NUGET_PACKAGES_DIRECTORY: '.nuget'
  NUGET_SERVER_URL: 'https://api.nuget.org/v3/index.json'
 
-
 stages:
   - build
   - test
   - pack
   - deploy
-  - deploy tests results
 
 
 cache:
@@ -49,14 +46,16 @@ build:
 unit tests:
  stage: test
  script:
-  - 'dotnet test ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} --collect "${TEST_COLLECTOR_NAME}"'
+  - 'dotnet test ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
+  - '${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
 integration tests:
  stage: test
  script:
-  - 'dotnet test ${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION}'
+  - 'dotnet test ${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
+  - '${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
@@ -109,14 +108,3 @@ deploy Strainer.AspNetCore:
   - 'dotnet nuget push ${NUGET_PACKAGE_PATH} --api-key ${NUGET_API_KEY} --source ${NUGET_SERVER_URL}'
  dependencies:
   - pack Strainer.AspNetCore
-
-deploy code coverage for unit tests:
- stage: deploy tests results
- only:
-  - master
-  - tags
- script:
-  - 'COVERLET_RESULT_PATH=$(find ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/${COVERLET_RESULT_DIRECTORY_NAME} -maxdepth 2 -type f -name "coverage.opencover.xml" -printf "%h/%f\n")'
-  - '${NUGET_PACKAGE_PATH}\packages\codecov\${CODECOV_VERSION}\tools\codecov.exe -f "${COVERLET_RESULT_PATH}" -t ${CODECOV_TOKEN}'
- dependencies:
-  - unit tests
