Update GitLab CI - fix upload to CodeCov

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ unit tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - '${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
+  - './${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
@@ -55,7 +55,7 @@ integration tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - '${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
+  - './${NUGET_PACKAGE_PATH}/codecovuploader/${CODECOV_VERSION}/tools/codecov.exe -f "${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
