--- a/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
+++ b/test/Strainer.IntegrationTests/Strainer.IntegrationTests.csproj
@@ -12,6 +12,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="CodecovUploader" Version="0.2.4" />
+	<PackageReference Include="coverlet.msbuild" Version="3.1.2">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
