--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,7 @@ unit tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - 'curl -Os https://uploader.codecov.io/latest/linux/codecov'
-  - 'chmod +x codecov'
-  - './codecov'
+  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux -f "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
@@ -57,9 +55,7 @@ integration tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - 'curl -Os https://uploader.codecov.io/latest/linux/codecov'
-  - 'chmod +x codecov'
-  - './codecov'
+  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux -f "${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME}/coverage.opencover.xml" -t ${CODECOV_TOKEN}'
  dependencies:
   - build
 
