--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
  BUILD_CONFIGURATION: 'Release'
  NUGET_PACKAGES_DIRECTORY: '.nuget'
  NUGET_SERVER_URL: 'https://api.nuget.org/v3/index.json'
+ CODECOV_TOKEN: 'dd9f4cc6-3149-4d03-a057-0c50bffccf3f'
 
 stages:
   - build
@@ -47,7 +48,7 @@ unit tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux --file "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" --token "dd9f4cc6-3149-4d03-a057-0c50bffccf3f"'
+  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux --file "${TEST_DIRECTORY}/${UNIT_TESTS_PROJECT_NAME}/coverage.opencover.xml" --token ${CODECOV_TOKEN}'
  dependencies:
   - build
 
@@ -55,7 +56,7 @@ integration tests:
  stage: test
  script:
   - 'dotnet test ${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME} --no-restore --no-build --configuration ${BUILD_CONFIGURATION} /p:CollectCoverage=true /p:CoverletOutputFormat=${TEST_COLLECTOR_NAME}'
-  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux --file "${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME}/coverage.opencover.xml" --token "dd9f4cc6-3149-4d03-a057-0c50bffccf3f"'
+  - './${NUGET_PACKAGES_DIRECTORY}/codecovuploader/${CODECOV_VERSION}/tools/codecov-linux --file "${TEST_DIRECTORY}/${INTEGRATION_TESTS_PROJECT_NAME}/coverage.opencover.xml" --token ${CODECOV_TOKEN}'
  dependencies:
   - build
 
