--- a/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
+++ b/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
@@ -22,8 +22,8 @@
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;CS1591</NoWarn>
+  <PropertyGroup>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
