--- a/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
+++ b/src/Strainer.ExampleWebApi/Strainer.ExampleWebApi.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6</TargetFramework>
     <AssemblyName>Fluorite.Strainer.ExampleWebApi</AssemblyName>
     <RootNamespace>Fluorite.Strainer.ExampleWebApi</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
