--- a/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
+++ b/src/Strainer.AspNetCore/Strainer.AspNetCore.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>Fluorite.Strainer.AspNetCore</AssemblyName>
     <RootNamespace>Fluorite.Strainer.AspNetCore</RootNamespace>
     <Authors>Fluorite</Authors>
-    <Version>3.1.3</Version>
+    <Version>4.0.0-preview1</Version>
     <Description>
       Extensions for using Strainer with ASP.NET Core.
     </Description>
